force-app/main/default/objects/Lead/fields/Buyer_Type__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Type__c</fullName>
    <label>Buyer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First-time Homebuyer</fullName>
            </value>
            <value>
                <fullName>Move-up Buyer</fullName>
            </value>
            <value>
                <fullName>Downsizing Buyer</fullName>
            </value>
            <value>
                <fullName>Relocation Buyer</fullName>
            </value>
            <value>
                <fullName>Second Home Buyer</fullName>
            </value>
            <value>
                <fullName>Vacation Home Buyer</fullName>
            </value>
            <value>
                <fullName>Luxury Home Buyer</fullName>
            </value>
            <value>
                <fullName>Empty Nester</fullName>
            </value>
            <value>
                <fullName>Growing Family</fullName>
            </value>
            <value>
                <fullName>Cash Buyer</fullName>
            </value>
            <value>
                <fullName>FHA Loan Buyer</fullName>
            </value>
            <value>
                <fullName>Conventional Loan Buyer</fullName>
                <isActive>false</isActive>
                <label>Conventional Loan Buyer</label>
            </value>
            <value>
                <fullName>Couple</fullName>
                <isActive>false</isActive>
                <label>Couple</label>
            </value>
            <value>
                <fullName>Multigenerational Family</fullName>
                <isActive>false</isActive>
                <label>Multigenerational Family</label>
            </value>
            <value>
                <fullName>Retiree</fullName>
                <isActive>false</isActive>
                <label>Retiree</label>
            </value>
            <value>
                <fullName>Single Professional</fullName>
                <isActive>false</isActive>
                <label>Single Professional</label>
            </value>
            <value>
                <fullName>VA Loan Buyer</fullName>
                <isActive>false</isActive>
                <label>VA Loan Buyer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>