force-app/main/default/objects/Lead/fields/Desired_Move_in_Date__c.field-meta.xml
<CustomField>
    <fullName>Desired_Move_in_Date__c</fullName>
    <label>Desired Move-in Date</label>
    <type>Date</type>
</CustomField>