force-app/main/default/objects/Lead/fields/Investor_Type__c.field-meta.xml
<CustomField>
    <fullName>Investor_Type__c</fullName>
    <label>Investor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buy-and-Hold Investor</fullName>
            </value>
            <value>
                <fullName>Fix-and-Flip Investor</fullName>
            </value>
            <value>
                <fullName>BRRRR Investor (Buy, Rehab, Rent, Refinance, Repeat)</fullName>
            </value>
            <value>
                <fullName>Wholesaler</fullName>
            </value>
            <value>
                <fullName>Real Estate Developer</fullName>
            </value>
            <value>
                <fullName>Commercial Property Investor</fullName>
            </value>
            <value>
                <fullName>Residential Property Investor</fullName>
            </value>
            <value>
                <fullName>Multi-family Property Investor</fullName>
            </value>
            <value>
                <fullName>Vacation Rental Investor</fullName>
            </value>
            <value>
                <fullName>Short-term Rental Investor (e.g., Airbnb)</fullName>
            </value>
            <value>
                <fullName>Real Estate Investment Trust (REIT) Investor</fullName>
            </value>
            <value>
                <fullName>Turnkey Property Investor</fullName>
            </value>
            <value>
                <fullName>Value-Add Investor</fullName>
            </value>
            <value>
                <fullName>Distressed Property Investor</fullName>
            </value>
            <value>
                <fullName>Land Developer</fullName>
            </value>
            <value>
                <fullName>House Hacker (Owner-occupant investor)</fullName>
            </value>
            <value>
                <fullName>Passive Real Estate Investor</fullName>
            </value>
            <value>
                <fullName>Syndication Investor</fullName>
            </value>
            <value>
                <fullName>Note Investor</fullName>
            </value>
            <value>
                <fullName>Tax Lien Investor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>